# PEA_4GA

./: CMakeLists.txt  main.cpp  uwagi.txt
GA/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
Matrix/: DynamicMatrix.cpp  DynamicMatrix.h
Utils/: Parser.cpp  Parser.h  Structures.h  Utils.cpp  Utils.h  ftv47.xml
tests/: ftv170.xml
wyniki/: results090.csv
